AncientAdventures/log.txt
Wed Aug 10 19:03:48 2022
macOS-10.16-x86_64-i386-64bit
Ren'Py 8.0.1.22070801
 

Bootstrap to the start of init.init took 0.07s
Early init took 0.01s
Loader init took 0.05s
Loading error handling took 0.05s
Loading script took 0.48s
Loading save slot metadata. took 0.05s
Loading persistent took 0.00s

File "game/script.rpy", line 455: expected 'simple_expression' not found.
    show p basic at left with with dissolve
                              ^
DPI scale factor: 1.000000
Interface start took 0.45s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1440, 900)
swap interval: 1 frames
Windowed mode.
Vendor: "b'Intel Inc.'"
Renderer: b'Intel HD Graphics 5000 OpenGL Engine'
Version: b'2.1 INTEL-16.0.49'
Display Info: None
Screen sizes: virtual=(1920, 1080) physical=(1338, 753) drawable=(1338, 753)
Maximum texture size: 4096x4096
Resetting cache.
Bootstrap to the start of init.init took 33.25s
Early init took 0.00s
Loader init took 0.01s
Loading error handling took 0.02s
Loading script took 0.22s
Loading save slot metadata. took 0.01s
Loading persistent took 0.00s
Faled to initialize steam: OSError('dlopen(/Applications/renpy-8.0.1-sdk/lib/py3-mac-x86_64/libsteam_api.dylib, 6): image not found')
Running init code took 0.08s
Loading analysis data took 0.03s
Analyze and compile ATL took 0.00s
Index archives took 0.00s
Backing up script files to '/Users/spencerchampion/Library/RenPy/backups/AncientAdventures':
Dump and make backups. took 0.05s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.03s
DPI scale factor: 1.000000
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.05s
Build styles took 0.00s
Load screen analysis took 0.00s
Analyze screens took 0.01s
Save screen analysis took 0.03s
Prepare screens took 0.08s
Save pyanalysis. took 0.03s
Save bytecode. took 0.02s
Running _start took 0.00s
Performance test:
Interface start took 0.08s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1440, 900)
swap interval: 1 frames
Windowed mode.
Vendor: "b'Intel Inc.'"
Renderer: b'Intel HD Graphics 5000 OpenGL Engine'
Version: b'2.1 INTEL-16.0.49'
Display Info: None
Screen sizes: virtual=(1920, 1080) physical=(1338, 753) drawable=(1338, 753)
Maximum texture size: 4096x4096

Full traceback:
  File "game/script.rpy", line 458, in script
    if time = 0:
  File "/Applications/renpy-8.0.1-sdk/renpy/ast.py", line 2115, in execute
    if renpy.python.py_eval(condition):
  File "/Applications/renpy-8.0.1-sdk/renpy/python.py", line 1078, in py_eval
    code = py_compile(code, 'eval')
  File "/Applications/renpy-8.0.1-sdk/renpy/python.py", line 1015, in py_compile
    raise e
  File "/Applications/renpy-8.0.1-sdk/renpy/python.py", line 967, in py_compile
    raise orig_e
  File "/Applications/renpy-8.0.1-sdk/renpy/python.py", line 960, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, 1)
SyntaxError: invalid syntax (script.rpy, line 458)

While running game code:
  File "game/script.rpy", line 458, in script
    if time = 0:
SyntaxError: invalid syntax (script.rpy, line 458)

Full traceback:
  File "game/script.rpy", line 458, in script
    if time = 0:
  File "/Applications/renpy-8.0.1-sdk/renpy/ast.py", line 2115, in execute
    if renpy.python.py_eval(condition):
  File "/Applications/renpy-8.0.1-sdk/renpy/python.py", line 1078, in py_eval
    code = py_compile(code, 'eval')
  File "/Applications/renpy-8.0.1-sdk/renpy/python.py", line 1015, in py_compile
    raise e
  File "/Applications/renpy-8.0.1-sdk/renpy/python.py", line 967, in py_compile
    raise orig_e
  File "/Applications/renpy-8.0.1-sdk/renpy/python.py", line 960, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, 1)
SyntaxError: invalid syntax (script.rpy, line 458)

While running game code:
  File "game/script.rpy", line 458, in script
    if time = 0:
SyntaxError: invalid syntax (script.rpy, line 458)

Full traceback:
  File "game/script.rpy", line 458, in script
    if time = 0:
  File "/Applications/renpy-8.0.1-sdk/renpy/ast.py", line 2115, in execute
    if renpy.python.py_eval(condition):
  File "/Applications/renpy-8.0.1-sdk/renpy/python.py", line 1078, in py_eval
    code = py_compile(code, 'eval')
  File "/Applications/renpy-8.0.1-sdk/renpy/python.py", line 1015, in py_compile
    raise e
  File "/Applications/renpy-8.0.1-sdk/renpy/python.py", line 967, in py_compile
    raise orig_e
  File "/Applications/renpy-8.0.1-sdk/renpy/python.py", line 960, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, 1)
SyntaxError: invalid syntax (script.rpy, line 458)

While running game code:
  File "game/script.rpy", line 458, in script
    if time = 0:
SyntaxError: invalid syntax (script.rpy, line 458)
Resetting cache.
Bootstrap to the start of init.init took 251.49s
Early init took 0.00s
Loader init took 0.02s
Loading error handling took 0.03s
Loading script took 0.29s
Loading save slot metadata. took 0.03s
Loading persistent took 0.00s
Faled to initialize steam: OSError('dlopen(/Applications/renpy-8.0.1-sdk/lib/py3-mac-x86_64/libsteam_api.dylib, 6): image not found')
Running init code took 0.05s
Loading analysis data took 0.02s
Analyze and compile ATL took 0.00s
Index archives took 0.00s
Backing up script files to '/Users/spencerchampion/Library/RenPy/backups/AncientAdventures':
Dump and make backups. took 0.06s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.07s
DPI scale factor: 1.000000
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.05s
Build styles took 0.00s
Load screen analysis took 0.00s
Analyze screens took 0.02s
Save screen analysis took 0.03s
Prepare screens took 0.08s
Save pyanalysis. took 0.00s
Save bytecode. took 0.02s
Running _start took 0.00s
Performance test:
Interface start took 0.09s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1440, 900)
swap interval: 1 frames
Windowed mode.
Vendor: "b'Intel Inc.'"
Renderer: b'Intel HD Graphics 5000 OpenGL Engine'
Version: b'2.1 INTEL-16.0.49'
Display Info: None
Screen sizes: virtual=(1920, 1080) physical=(1338, 753) drawable=(1338, 753)
Maximum texture size: 4096x4096
Resetting cache.
Bootstrap to the start of init.init took 286.82s
Early init took 0.00s
Loader init took 0.01s
Loading error handling took 0.03s
Loading script took 0.19s
Loading save slot metadata. took 0.03s
Loading persistent took 0.00s
Faled to initialize steam: OSError('dlopen(/Applications/renpy-8.0.1-sdk/lib/py3-mac-x86_64/libsteam_api.dylib, 6): image not found')
Running init code took 0.06s
Loading analysis data took 0.02s
Analyze and compile ATL took 0.00s
Index archives took 0.00s
Dump and make backups. took 0.05s
Cleaning cache took 0.00s
Making clean stores took 0.00s
Initial gc. took 0.06s
DPI scale factor: 1.000000
Creating interface object took 0.00s
Cleaning stores took 0.00s
Init translation took 0.06s
Build styles took 0.00s
Load screen analysis took 0.04s
Analyze screens took 0.00s
Save screen analysis took 0.00s
Prepare screens took 0.09s
Save pyanalysis. took 0.00s
Save bytecode. took 0.00s
Running _start took 0.00s
Performance test:
Interface start took 0.10s

Initializing gl2 renderer:
primary display bounds: (0, 0, 1440, 900)
swap interval: 1 frames
Windowed mode.
Vendor: "b'Intel Inc.'"
Renderer: b'Intel HD Graphics 5000 OpenGL Engine'
Version: b'2.1 INTEL-16.0.49'
Display Info: None
Screen sizes: virtual=(1920, 1080) physical=(1338, 753) drawable=(1338, 753)
Maximum texture size: 4096x4096
